Hid non-game pages

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="/">Home</a></li>
             <li role="presentation"><a href="/about">About</a></li>
-            <li role="presentation"><a href="http://flask.pocoo.org" target="_blank">More About Flask</a></li>
+            <li role="presentation"><a href="/game">Game</a></li>
           </ul>
         </nav>
       </div>
