--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,7 +2,7 @@
 {% block title %}About{% endblock %}
 {% block body %}
 <div class="jumbotron">
-  <h1>The About Page</h1>
-  <p class="lead">You can learn more about my website here.</p>
+  <h1>About</h1>
+  <p class="lead">Nothing to see here.</p>
 </div>
 {% endblock %}
