Made text larger on client

--- a/app/static/game.css
+++ b/app/static/game.css
@@ -6,10 +6,12 @@ body {
 textarea {
 	background-color: black;
 	color: white;
+	font-size: large;
 	resize: none;
 }
 
 input {
 	background-color: black;
 	color: white;
+	font-size: large;
 }
